--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ charset-normalizer==2.0.12
 discord.py==2.0.1
 idna==3.3
 multidict==6.0.2
+python-dotenv==1.0.0
 pytz==2022.1
 pytz-deprecation-shim==0.1.0.post0
 requests==2.27.1
